[tool.poetry]
name = "bme280-mqtt-ha"
version = "1.0.0"
description = "Daemon for BME280 sensor reporting through MQTT to Home Assistant"
authors = ["Scott Presnell"]
maintainers = ["Stefan Thoss"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
configparser = "^4.0.2"
paho-mqtt = "^2.1.0"
pimoroni-bme280 = "^1.0.0"
python-daemon = "^3.0.1"
smbus3 = "^0.5.5"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']

[tool.isort]
profile = 'black'
